# claude-usecases

./: .gitattributes  .gitignore  .mcp.json  .pr-description-fix-errors.md  .pr-description.md  .pre-commit-config.yaml  CLAUDE.md  CREATE_PR_CONTRACT_REDLINING.md  INTELLIGENCE_DASHBOARD_SUMMARY.md  MERGE_INSTRUCTIONS.md  PARTNERSHIP_DASHBOARD_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_CONTRACT_REDLINING.md  PR_DESCRIPTION_IMPACT_TEMPLATES.md  PR_DESCRIPTION_INTELLIGENCE_EXTRACTOR.md  PULL_REQUEST.md  README.md  TESTING.md  example-input.md  mypy.ini  package.json  plugin.json  pyproject.toml  pytest.ini  requirements-test.txt  weekly-status-report-2025-11-17.html  zapier-reorganization-guide.md
.claude/agents/: README.md  compliance-checker.md  content-coordinator.md  customer-success-coordinator.md  data-integration-specialist.md  design-reviewer.md  executive-advisor.md  financial-analyst.md  grant-strategist.md  legal-analyst.md  qa-specialist.md  research-coordinator.md
.claude/commands/: board-prep.md  brief.md  client-onboard.md  compliance-audit.md  deal-review.md  debug.md  elevate.md  ethics.md  extract.md  fda.md  finance.md  impact-report.md  implement-architecture-fixes.md  meeting-wrap.md  morning.md  newsletter.md  orchestrate.md  outreach.md  partnership-eval.md  persona.md  portfolio.md  proposal.md  quarterly-report.md  redline.md  research-brief.md  research.md  skills.md  sop.md  tracker.md  venture-launch.md  weekly-brief.md  weekly-review.md
.claude/hooks/: hooks.json
.claude/skills/360-board-meeting-prep/: QUICK-REFERENCE.md  QUICK-START.md  README.md  SKILL.md
.claude/skills/360-client-portfolio-builder/: IMPLEMENTATION-GUIDE.md  INDEX.md  QUICK-START.md  SKILL.md
.claude/skills/360-executive-project-tracker/: MANIFEST.md  QUICK-START.md  README.md  SKILL.md  skill.md
.claude/skills/360-newsletter-generator/: EXAMPLES.md  IMPLEMENTATION-GUIDE.md  QUICK-START.md  README.md  SKILL.md
.claude/skills/360-proposal-builder/: QUICK-START.md  README.md  SKILL.md
.claude/skills/ai-ethics-advisor/: QUICK-START.md  (+4 more)
.github/: pull_request_template.md
.github/workflows/: README.md  code-quality.yml  coverage.yml  tests.yml
360-board-meeting-prep/: README.md  SKILL.md
360-board-meeting-prep/assets/: docx_utilities.py
360-board-meeting-prep/references/: client-portfolio-health.md  financial-dashboard.md  governance-compliance.md  strategic-initiatives.md
config/: skill-structure-requirements.yaml
docs/: ARCHITECTURE_EFFICIENCY_REVIEW.md  ARCHITECTURE_REVIEW.md  CREATING-SKILLS.md  KNOWN-ISSUE-CI-TEST-FAILURES.md  KNOWN-ISSUE-YAML-IMPORT.md  OPERATIONALIZATION-GUIDE.md  PLUGINS-REFERENCE.md  QUICK-REFERENCE.md  SKILL-STRUCTURE-VALIDATION.md  TESTING.md
docs/pr-descriptions/: CREATE_PR_INSTRUCTIONS.md  OPEN_PR_REVIEW_SUMMARY.md  PR_ARCHITECTURE_REVIEW_FINAL_BATCH.md  PR_DESCRIPTION_CROSS_LINKING.md  PR_DESCRIPTION_FINANCIAL_MODELING.md  PR_DESCRIPTION_OPEN_DEEP_RESEARCH.md  PR_DESCRIPTION_SALES_AUTOMATOR.md  PR_DESCRIPTION_SKILL_REFACTORING_COMPLETE.md  PR_DESCRIPTION_SKILL_STRUCTURE_VALIDATION.md  PR_DESCRIPTION_TESTING.md  README.md
docs/summaries/: CONTRACT_REDLINING_TOOL_SUMMARY.md  README.md  SALES_AUTOMATOR_SUMMARY.md  skill-consolidation-backup-manifest.md
examples/: example-workflow-skill.md
intelligence-dashboard/: .env.local.example  DEPLOYMENT-TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  README.md  package.json  supabase-schema.sql  tailwind.config.js  vercel.json  vitest.config.ts  zapier-supabase-integration.js
intelligence-dashboard/tests/: ErrorBoundary.test.tsx  MetricsCards.test.tsx  OverviewMetrics.test.tsx  PartnerTypeSelector.test.tsx  PatternDetection.test.tsx  setup.ts  supabase.test.ts
relationship-intelligence/: BLUEPRINT_VERSIONS.md  MAKE_DIRECT_SETUP.md  MAKE_POST_IMPORT_SETUP.md  MAKE_SETUP.md  README.md  combined-schema.sql  make-blueprint-corrected.json  make-blueprint.json  meeting-intelligence-extractor-v2.md
relationship-intelligence/dashboard/: .env.example  .gitignore  README.md  package.json  vitest.config.js  vitest.config.ts
scripts/: check_skill_frontmatter.py  consolidate_duplicate_skills.py  generate_skill_docs.py  generate_skill_tests.py  test-supabase-connection.sh  validate_skill_structure.py
shared/: __init__.py  base_orchestrator.py  config_loader.py
shared/dashboard-components/: package.json  tsconfig.json
skills/: 360-client-portfolio-builder  ceo-advisor  design-director  executive-impact-presentation-generator  intelligence-extractor  open-deep-research-team  skill-orchestrator  workflow-process-generator
skills/360-client-portfolio-builder/: INDEX.md  QUICK-START.md  README.md  SKILL.md
skills/360-content-converter/: INDEX.md  README.md  SKILL.md
skills/360-newsletter-generator/: INDEX.md  README.md
skills/360-use-cases/: QUICK-START.md  README.md  SKILL.md
skills/990-ez-preparation/: QUICK-START.md  README.md  SKILL.md
skills/ceo-advisor/: QUICK-START.md  README.md  SKILL.md
skills/design-director/: INDEX.md  QUICK-START.md  README.md  SKILL.md
skills/executive-impact-presentation-generator/: CONTENT_SCHEMA_TEMPLATE.md  INDEX.md  QUICK_REFERENCE.md  README.md  SKILL.md
skills/intelligence-extractor/: INDEX.md  QUICK-START.md  README.md  SKILL.md
skills/open-deep-research-team/: README.md  SKILL.md
skills/sales-automator/: README.md  SKILL.md
skills/skill-orchestrator/: EXAMPLES.md  IMPLEMENTATION.md  INDEX.md  README.md  SKILL.md
skills/templates/: plugin-template.json  skill-template.md
skills/vianeo-persona-builder/: INDEX.md  QUICK-START.md  README.md  SKILL.md
skills/vianeo-validation-framework/: INDEX.md  README.md
skills/workflow-process-generator/: QUICK-START.md  README.md  SKILL.md
templates/impact-reports/: IMPLEMENTATION_SUMMARY.md  README.md
templates/skill-docs/: QUICK-START.template.md  README.template.md  SKILL.template.md
tests/: README.md  conftest.py
tests/data/: README.md
tests/factories/: __init__.py  financial.py  organization.py  persona.py  project.py
tests/integration/: __init__.py  test_skill_workflows.py
(+423 files in other folders)
