[project]
name = "claude-usecases"
version = "2.8.0"
description = "Comprehensive collection of Claude AI skills and workflows for specialized business and technical automation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "360 Social Impact Studios"}]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "responses>=0.24.0",
    "freezegun>=1.4.0",
    "faker>=22.0.0",
    "coverage[toml]>=7.4.0",
    "pytest-html>=4.1.0",
]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    "ruff>=0.1.0",
]
all = [
    "claude-usecases[test,dev]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "skills", ".claude/skills"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full workflow testing)",
    "financial: Financial calculation tests (HIGH PRIORITY - require precision)",
    "compliance: Regulatory compliance tests (HIGH PRIORITY - legal/regulatory)",
    "data_processing: Data transformation and processing tests",
    "api: External API integration tests",
    "slow: Slow-running tests (>5 seconds)",
]
addopts = [
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["skills", ".claude/skills", "scripts"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/node_modules/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.black]
line-length = 127
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | node_modules
    | __pycache__
    | dist
    | build
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = false  # Gradual typing adoption

[tool.ruff]
line-length = 127
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    ".venv",
    "node_modules",
    "__pycache__",
]

[tool.ruff.isort]
known-first-party = ["skills"]
